<resources>
    <string name="app_name">Project 2 Aireline</string>
    <string name="logininfo">"Your AireLine "</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="mainTv">"Aireine Reservation "</string>
    <string name="airline">Airline</string>
    <string name="createAccount">Create Account</string>
    <string name="manage_system">"Manage System "</string>
    <string name="adminUsername">Username</string>
    <string name="adminusername" />
    <string name="adminlogin" />
    <string name="administructions">Enter Administrator Username and Password:</string>
    <string name="managesysContinue">CONTINUE...</string>
    <string name="flightnumber">Flight Number</string>
    <string name="departurelocation">Departure Location</string>
    <string name="arrivalLocation">Arrival Location</string>
    <string name="departuretime">Departure Time</string>
    <string name="flightcapacity">Flight Capacity</string>
    <string name="price">Price $0.00</string>
    <string name="enterflight">ENTER FLIGHT</string>
    <string name="reserveseat">RESERVE SEAT</string>
    <string name="reserveseatinfo">Enter Departure and Arrival Information:</string>
    <string name="reserveseatdeparture">Departure Location</string>
    <string name="reserveseatArrival">Arrival Location</string>
    <string name="reserveseatNumbertickets"># of Tickets</string>
    <string name="reserveseatSearch">SEARCH FLIGHTS...</string>
    <string name="reserveseatButton">ENTER</string>
    <string name="dialogusername">Username</string>
    <string name="dialogpassword">Password</string>
    <string name="dialogenter">ENTER</string>
    <string name="reserveseatlogin"><![CDATA[ENTER USERNAME & PASSWORD TO RESERVE SEATS]]></string>
    <string name="reservePassword">Password</string>
    <string name="reserveseatEnter">ENTER</string>
    <string name="reservepass">Password</string>
    <string name="mainCancel">CANCEL RESERVATION</string>
    <string name="cancelusername">Username</string>
    <string name="cancelPassword">Password</string>
    <string name="cancelLogin">Login</string>
    <string name="cancelInfo">Enter Username and Password</string>
    <string name="reserveUsername">Username</string>

    <string name="cancelUsername">Username</string>

    <string name="cancelinfo"><![CDATA[Enter Username & Password]]></string>
    <string name="infotocancel"><![CDATA[Enter Username & Password]]></string>
    <string name="part2">Password</string>
    <string name="cancel"><![CDATA[Enter Username & Password]]></string>
    <string name="project"><![CDATA[Enter Username & Password]]></string>
    <string name="canselect">SELECT RESERVATION TO CANCEL</string>
    <string name="reservebutton">RESERVE FLIGHT</string>
    <string name="reserveflightnum">Enter Flight Number</string>
    <string name="cancelair">SELECT RESERVATION TO CANCEL</string>
    <string name="submitCancellation">Type the Flight Number to cancel reservation</string>
    <string name="entercancel">Enter Flight Number to Cancel</string>
    <string name="enterflightnum">ENTER FLIGHT NUMBER</string>
    <string name="part1">Enter Flight Number</string>
    <string name="part22">ENTER FLIGHT NUMBER TO CANCEL RESERVATION</string>
</resources>
