<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <Button
        android:id="@+id/bCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <Button
        android:id="@+id/ManageSystembutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_system"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bCreateAccount" />

    <Button
        android:id="@+id/reserveseatbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reserveseat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bCreateAccount"
        app:layout_constraintVertical_bias="0.076" />

    <Button
        android:id="@+id/cancelReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainCancel"
        app:layout_constraintBottom_toTopOf="@+id/ManageSystembutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reserveseatbtn" />
</androidx.constraintlayout.widget.ConstraintLayout>